--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
-    "reactstrap": "^8.1.1"
+    "reactstrap": "^8.1.1",
+    "shards-react": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
